--- a/crontab.config
+++ b/crontab.config
@@ -52,3 +52,7 @@
 % demo, invoke test:run/1
 {{"*", "*", "*", "*", "*"}, {test, run, [1]}}.
 
+{{"1-30/1", "11-15/2,2,3,4", "1-31", "4", "*"}, {io, format, ["aaa~n"]}}.
+{{"1-30/1", "11-15/2,2,3,4", "1-31", "4", "*"}, {io, format, ["bbb~n"]}}.
+{{"1-30/1", "11-15/2,2,3,4", "1-31", "4", "*"}, {io, format, ["ccc~n"]}}.
+
